--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,8 @@
         android:id="@+id/banner"
         android:layout_width="0dp"
         android:layout_height="200dp"
+        android:background="@color/colorPrimary"
+        android:padding="15dp"
         app:fb_autoTurningTime="3000"
         app:fb_canLoop="true"
         app:layout_constraintLeft_toLeftOf="parent"
