--- a/flybanner/src/main/res/layout/fb_include_viewpager.xml
+++ b/flybanner/src/main/res/layout/fb_include_viewpager.xml
@@ -6,13 +6,13 @@
        tools:parentTag="android.widget.RelativeLayout">
 
     <com.xia.flybanner.view.FBLoopViewPager
-        android:id="@+id/fb_loopViewPager"
+        android:id="@+id/fb_loop_vp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
     <!-- 翻页指示点的viewGroup -->
     <LinearLayout
-        android:id="@+id/fb_loPageTurningPoint"
+        android:id="@+id/fb_indicator_ll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
