--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="15dp"
+        android:layout_marginLeft="15dp"
         android:orientation="horizontal">
 
         <androidx.appcompat.widget.AppCompatButton
@@ -51,4 +51,12 @@
         android:layout_marginLeft="15dp"
         android:onClick="refreshData"
         android:text="刷新数据"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/main_set_item_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:onClick="setCurrentItem"
+        android:text="随机设定页面显示"/>
 </androidx.appcompat.widget.LinearLayoutCompat>
