--- a/flybanner/src/main/res/layout/fb_include_viewpager.xml
+++ b/flybanner/src/main/res/layout/fb_include_viewpager.xml
@@ -16,6 +16,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        tools:layout_alignParentBottom="true"
+        tools:layout_alignParentRight="true">
     </LinearLayout>
 </merge>
