--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,39 +64,6 @@
         app:layout_constraintRight_toRightOf="@+id/main_notice_view"
         app:layout_constraintTop_toTopOf="@+id/main_notice_view"/>
 
-    <View
-        android:id="@+id/main_notice_view1"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="15dp"
-        android:background="@drawable/bg_notice"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/main_notice_view"/>
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/main_notice_iv1"
-        android:layout_width="35dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:adjustViewBounds="true"
-        android:src="@drawable/ic_notice"
-        app:layout_constraintBottom_toBottomOf="@+id/main_notice_view1"
-        app:layout_constraintLeft_toLeftOf="@+id/main_notice_view1"
-        app:layout_constraintTop_toTopOf="@+id/main_notice_view1"/>
-
-    <com.xia.flybanner.FlyBanner
-        android:id="@+id/main_notice1"
-        android:layout_width="0pt"
-        android:layout_height="0pt"
-        android:layout_marginLeft="20dp"
-        app:layout_constraintBottom_toBottomOf="@+id/main_notice_view1"
-        app:layout_constraintLeft_toRightOf="@+id/main_notice_iv1"
-        app:layout_constraintRight_toRightOf="@+id/main_notice_view1"
-        app:layout_constraintTop_toTopOf="@+id/main_notice_view1"/>
-
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/main_loop_control_btn"
         android:layout_width="wrap_content"
@@ -105,7 +72,7 @@
         android:layout_marginTop="20dp"
         android:text="控制自动轮播"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/main_notice_view1"/>
+        app:layout_constraintTop_toBottomOf="@+id/main_notice_view"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/main_loop_status_tv"
@@ -169,4 +136,21 @@
         app:layout_constraintBaseline_toBaselineOf="@+id/main_indicator_orientation_btn"
         app:layout_constraintLeft_toRightOf="@+id/main_indicator_orientation_btn"
         tools:text="翻页方向：横向"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/main_guide_page_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="引导页设置"
+        app:layout_constraintLeft_toLeftOf="@+id/main_indicator_orientation_btn"
+        app:layout_constraintTop_toBottomOf="@+id/main_indicator_orientation_btn"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/main_guide_page_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/main_guide_page_btn"
+        app:layout_constraintLeft_toRightOf="@+id/main_guide_page_btn"
+        tools:text="是否为引导页：false"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
