1.支持xml配置相关属性

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,16 @@
         android:layout_width="0pt"
         android:layout_height="0pt"
         android:layout_margin="15dp"
-        app:fb_autoTurningTime="3000"
-        app:fb_canLoop="true"
+        app:fb_indicatorAlign="align_rightBottom"
+        app:fb_indicatorMargin="35"
+        app:fb_indicatorOrientation="horizontal"
+        app:fb_indicatorShow="true"
+        app:fb_indicatorSpacing="10"
+        app:fb_pageAutoTurningTime="3000"
+        app:fb_pageCanLoop="true"
+        app:fb_pageOrientation="horizontal"
+        app:fb_pageRadius="50"
+        app:fb_pageType="normal"
         app:layout_constraintBottom_toBottomOf="@+id/main_blur_view"
         app:layout_constraintDimensionRatio="h,8:4"
         app:layout_constraintLeft_toLeftOf="parent"
