--- a/app/src/main/res/layout/item_banner_img.xml
+++ b/app/src/main/res/layout/item_banner_img.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.AppCompatImageView
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/item_banner_iv"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scaleType="fitXY"
-    tools:src="@drawable/ic_test_0"/>
+    app:cardCornerRadius="15dp"
+    app:cardElevation="6dp"
+    app:cardMaxElevation="12dp"
+    app:cardUseCompatPadding="false">
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/item_banner_iv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="fitXY"
+        tools:src="@drawable/ic_test_0"/>
+</androidx.cardview.widget.CardView>
