1.属性更改优化

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,18 +20,18 @@
 
     <com.xia.flybanner.FlyBanner
         android:id="@+id/main_banner"
-        android:layout_width="0pt"
-        android:layout_height="0pt"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_margin="15dp"
         app:fb_indicatorAlign="align_rightCenter"
-        app:fb_indicatorMargin="35"
+        app:fb_indicatorMargin="15dp"
         app:fb_indicatorOrientation="vertical"
         app:fb_indicatorShow="true"
-        app:fb_indicatorSpacing="10"
+        app:fb_indicatorSpacing="3dp"
         app:fb_pageAutoTurningTime="3000"
         app:fb_pageCanLoop="false"
         app:fb_pageOrientation="vertical"
-        app:fb_pageRadius="0"
+        app:fb_pageRadius="20dp"
         app:fb_pageType="guide"
         app:layout_constraintBottom_toBottomOf="@+id/main_blur_view"
         app:layout_constraintDimensionRatio="h,8:4"
@@ -64,8 +64,8 @@
 
     <com.xia.flybanner.FlyBanner
         android:id="@+id/main_notice"
-        android:layout_width="0pt"
-        android:layout_height="0pt"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:layout_marginLeft="20dp"
         app:layout_constraintBottom_toBottomOf="@+id/main_notice_view"
         app:layout_constraintLeft_toRightOf="@+id/main_notice_iv"
