--- a/flybanner/src/main/res/values/attrs.xml
+++ b/flybanner/src/main/res/values/attrs.xml
@@ -12,11 +12,11 @@
         </attr>
         <attr name="fb_pageCanLoop" format="boolean"/>
         <attr name="fb_pageAutoTurningTime" format="integer"/>
-        <attr name="fb_pageRadius" format="integer"/>
-        <attr name="fb_pageRadiusTopLeft" format="integer"/>
-        <attr name="fb_pageRadiusTopRight" format="integer"/>
-        <attr name="fb_pageRadiusBottomLeft" format="integer"/>
-        <attr name="fb_pageRadiusBottomRight" format="integer"/>
+        <attr name="fb_pageRadius" format="dimension"/>
+        <attr name="fb_pageRadiusTopLeft" format="dimension"/>
+        <attr name="fb_pageRadiusTopRight" format="dimension"/>
+        <attr name="fb_pageRadiusBottomLeft" format="dimension"/>
+        <attr name="fb_pageRadiusBottomRight" format="dimension"/>
 
         <attr name="fb_indicatorShow" format="boolean"/>
         <attr name="fb_indicatorOrientation">
@@ -34,11 +34,11 @@
             <enum name="align_rightCenter" value="17"/>
             <enum name="align_rightBottom" value="18"/>
         </attr>
-        <attr name="fb_indicatorMargin" format="integer"/>
-        <attr name="fb_indicatorMarginLeft" format="integer"/>
-        <attr name="fb_indicatorMarginRight" format="integer"/>
-        <attr name="fb_indicatorMarginTop" format="integer"/>
-        <attr name="fb_indicatorMarginBottom" format="integer"/>
-        <attr name="fb_indicatorSpacing" format="integer"/>
+        <attr name="fb_indicatorMargin" format="dimension"/>
+        <attr name="fb_indicatorMarginLeft" format="dimension"/>
+        <attr name="fb_indicatorMarginRight" format="dimension"/>
+        <attr name="fb_indicatorMarginTop" format="dimension"/>
+        <attr name="fb_indicatorMarginBottom" format="dimension"/>
+        <attr name="fb_indicatorSpacing" format="dimension"/>
     </declare-styleable>
 </resources>
